--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,37 +1,47 @@
-\newacronym[longplural=internets de las cosass]{iot}{IoT}{internet de las cosas}
+\newacronym[longplural=servicios de regulación terciaria]{afrr}{aFRR}{servicio de regulación terciaria}
 
-\newacronym[longplural=internets de las cosas industrial]{iiot}{IIoT}{internet de las cosas industrial}
+\newacronym[longplural=direcciones comunes de unidad de datos del servicio de aplicación]{asdu}{ASDU}{dirección común de unidad de datos del servicio de aplicación}
 
 \newacronym[longplural=sistemas de almacenamiento de energía en baterías]{bess}{BESS}{sistema de almacenamiento de energía en baterías}
 
 \newacronym[longplural=sistemas de control de baterías]{bms}{BMS}{sistema de control de baterías}
 
-\newacronym[longplural=sistemas de información de planta]{pis}{PIS}{sistema de información de planta}
-
-\newacronym[longplural=unidades terminales remotas]{rtu}{RTU}{unidad terminal remota}
-
-\newacronym[longplural=sistemas de control industrial]{ics}{ICS}{sistema de control industrial}
-
-\newacronym[longplural=puntos frontera]{pf}{PF}{punto frontera}
-
-\newacronym[longplural=tecnologías operativas]{ot}{OT}{tecnología operativa}
-
-\newacronym[longplural=tecnologías de la información]{it}{IT}{tecnología de la información}
-
-\newacronym[longplural=zonas desmilitarizadas industriales]{idmz}{IDMZ}{Industrial desmilitarizado}
-
-\newacronym[longplural=direcciones comunes de unidad de datos del servicio de aplicación]{asdu}{ASDU}{dirección común de unidad de datos del servicio de aplicación}
+\newacronym[longplural=costes capitales]{capex}{CAPEX}{coste capitales}
 
 \newacronym[longplural=interrogaciones generales]{gi}{GI}{interrogación general}
 
+\newacronym[longplural=sistemas de control industrial]{ics}{ICS}{sistema de control industrial}
+
+\newacronym[longplural=zonas industriales desmilitarizadas]{idmz}{IDMZ}{zona industrial desmilitarizada}
+
+\newacronym[longplural=internets de las cosas industrial]{iiot}{IIoT}{internet de las cosas industrial}
+
 \newacronym[longplural=direcciones de objeto de información]{ioa}{IOA}{dirección de objeto de información}
 
-\newacronym[longplural=costes de operación]{opex}{OPEX}{costes de operación}
+\newacronym[longplural=internets de las cosass]{iot}{IoT}{internet de las cosas}
 
-\newacronym[longplural=costes capitales]{capex}{CAPEX}{costes capitales}
+\newacronym[longplural=tecnologías de la información]{it}{IT}{tecnología de la información}
+
+\newacronym[longplural=servicios de regulación secundaria]{mfrr}{mFRR}{servicio de regulación secundaria}
+
+\newacronym[longplural=operadores del mercado]{mo}{MO}{operador del mercado}
+
+\newacronym[longplural=unidades de tiempo de mercado]{mtu}{MTU}{unidad de tiempo de mercado}
 
 \newacronym[longplural=operadores del Mercado Ibérico de Energía]{omie}{OMIE}{Operador del Mercado Ibérico de Energía}
 
+\newacronym[longplural=costes de operación]{opex}{OPEX}{coste de operación}
+
+\newacronym[longplural=tecnologías operativas]{ot}{OT}{tecnología operativa}
+
+\newacronym[longplural=puntos frontera]{pf}{PF}{punto frontera}
+
+\newacronym[longplural=sistemas de información de planta]{pis}{PIS}{sistema de información de planta}
+
 \newacronym[longplural=Redes Eléctricas Españolas]{ree}{REE}{Red Eléctrica Española}
 
-\newacronym[longplural=unidades de tiempo de mercado]{mtu}{MTU}{unidad de tiempo de mercado}
+\newacronym[longplural=unidades terminales remotas]{rtu}{RTU}{unidad terminal remota}
+
+\newacronym[longplural=estados de carga]{soc}{SOC}{estado de carga}
+
+\newacronym[longplural=operadores del sistema de transimisón]{tso}{TSO}{operador del sistema de transmisión}
