Fix bibliography style

--- a/principal.tex
+++ b/principal.tex
@@ -91,7 +91,7 @@
 \input{chapter8.tex}
 
 \nocite{*}
-\bibliographystyle{styles/plain}
+\bibliographystyle{plainnat}
 \bibdata{references}
 \bibliography{references}
 \addcontentsline{toc}{chapter}{Bibliografía}
