Refactor latex commands

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -27,7 +27,7 @@ Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más 
 
 Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el internet de las cosas industrial, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería incansablemente en busca de los mejores márgenes.
 
-De hecho, así es como nace \textbf{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año.
+De hecho, así es como nace Optibat, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año.
 
 Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema con los componentes de la arquitectura ya existente, desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, validación para asegurar la seguridad y correcto funcionamiento, despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación de Optibat.
 
