Use comma for multiple citations

--- a/principal.tex
+++ b/principal.tex
@@ -18,7 +18,7 @@
 \usepackage{pgfgantt}
 
 \usepackage[sort&compress]{natbib}
-\bibpunct{}{}{;}{a}{}{}
+\bibpunct{}{}{,}{a}{}{}
 
 \usepackage[pdftex, plainpages=false, pdfpagelabels]{hyperref}
 \hypersetup{
