--- a/chapter8.tex
+++ b/chapter8.tex
@@ -28,14 +28,14 @@ Por último, se ha definido apropiadamente el comando y control del sistema, en 
 
 De esta forma, se ha habilitado el arbitraje de energía en el mercado en las instalaciones controladas. De no ser por el sistema desarrollado, al no existir ninguna otra solución alternativa desplegada en la península en la actualidad, las instalaciones a controlar registradas en el mercado tendrían que perder las oportunidades de arbitraje correspondientes o ser comandadas manualmente por los operarios de telecontrol, situación absolutamente inadmisible debido a la complejidad de la operación.
 
-Cabe destacar que tanto los \glspl{bess} como, por lo tanto, los sistemas de optimización de baterías en el mercado eléctrico, se encuentran todavía en su infancia, por lo menos en el territorio europeo. Según~\cite{hu2022119512}, ``el principal sistema de almacenamiento de energía en Europa sigue siendo el bombeo hidroeléctrico''. Esto significa que, viendo como el panorama de las tecnologías eléctricas pone su foco cada vez más en estas tecnologías de almacenamiento, es probable que salgan al mercado sistemas más sofisticados de control. Aunque, actualmente, las instalaciones con \glspl{bess} sean pocas en comparación al resto, las entidades energéticas buscan implantarlas en toda las instalaciones de generación para mejorar el aprovechamiento de la energía. Por ello, si bien el sistema implantado ha sido satisfactoriamente desplegado a lo largo de todo el país, quizás sea necesario tomar nuevas consideraciones al respecto y tener en cuenta dichas alternativas cuando la energía ciclada diariamente iguale o supere las cantidades de las de otros activos energéticos ampliamente asentados.
+Cabe destacar que tanto los \glspl{bess} como, por lo tanto, los sistemas de optimización de baterías en el mercado eléctrico, se encuentran todavía en su infancia, por lo menos en el territorio europeo. Precisamente, según un estudio sobre el uso de las tecnologías de almacenamiento~\cite{hu2022potential}, ``el principal sistema de almacenamiento de energía en Europa sigue siendo el bombeo hidroeléctrico''. Esto significa que, viendo como el panorama de las tecnologías eléctricas pone su foco cada vez más en estas tecnologías de almacenamiento, es probable que salgan al mercado sistemas más sofisticados de control. Aunque, actualmente, las instalaciones con \glspl{bess} sean pocas en comparación al resto, las entidades energéticas buscan implantarlas en toda las instalaciones de generación para mejorar el aprovechamiento de la energía. Por ello, si bien el sistema implantado ha sido satisfactoriamente desplegado a lo largo de todo el país, quizás sea necesario tomar nuevas consideraciones al respecto y tener en cuenta dichas alternativas cuando la energía ciclada diariamente iguale o supere las cantidades de las de otros activos energéticos ampliamente asentados.
 
 \section{Trabajo futuro}
 \label{makereference8.2}
 
-En cuanto al trabajo futuro, Optibat se encuentra limitado al arbitraje en los mercados spot: diario, intradiarios y continuo. Aún así, existen otros mercados más o menos rentables señalados en~\cite{boe20240425}, como los mercados de \gls{mfrr} y \gls{afrr} que negocian disponibilidades. Resulta interesante añadir soporte a estos mercados para completar así el perfil de arbitraje de estas tecnologías de almacenamiento, ya que, coincidentemente, las baterías también son idóneas para la operación en dichos mercados debido a sus altas capacidades de conmutación.
+En cuanto al trabajo futuro, Optibat se encuentra limitado al arbitraje en los mercados spot: diario, intradiarios y continuo. Aún así, existen otros mercados más o menos rentables~\cite{cnmc2024resolucion}, como los mercados de \gls{mfrr} y \gls{afrr} que negocian disponibilidades. Resulta interesante añadir soporte a estos mercados para completar así el perfil de arbitraje de estas tecnologías de almacenamiento, ya que, coincidentemente, las baterías también son idóneas para la operación en dichos mercados debido a sus altas capacidades de conmutación.
 
-Si bien la integración con los mercados de regulación es definitivamente la mejora más notable a realizar, también aporta beneficio refinar la modelización del desgaste de las baterías, como hacen en~\cite{shamarova2022review}. Mediante la incorporación de señales aún más granulares y las especificaciones del \gls{bms}, es posible modelizar incluso el imperceptible desgaste mismo del \gls{soc} de las baterías en reposo. Ciertamente, aunque no sea un aspecto sumamente prioritario, debido al constante ciclado de las baterías que, por naturaleza, no busca precisamente el mantenimiento en estado estacionario, el aporte sustancial toma forma del aumento de fidelidad de los procesos físicos modelados. Además, un análisis en profundidad del desgaste sufrido por la batería, más allá del consumo de los ciclos para los que está calificada por el manufacturador, brinda claridad a posibles optimizaciones del beneficio obtenido bajo condiciones más adversas que las experimentadas.
+Si bien la integración con los mercados de regulación es definitivamente la mejora más notable a realizar, también aporta beneficio refinar la modelización del desgaste de las baterías~\cite{shamarova2022review}. Mediante la incorporación de señales aún más granulares y las especificaciones del \gls{bms}, es posible modelizar incluso el imperceptible desgaste mismo del \gls{soc} de las baterías en reposo. Ciertamente, aunque no sea un aspecto sumamente prioritario, debido al constante ciclado de las baterías que, por naturaleza, no busca precisamente el mantenimiento en estado estacionario, el aporte sustancial toma forma del aumento de fidelidad de los procesos físicos modelados. Además, un análisis en profundidad del desgaste sufrido por la batería, más allá del consumo de los ciclos para los que está calificada por el manufacturador, brinda claridad a posibles optimizaciones del beneficio obtenido bajo condiciones más adversas que las experimentadas.
 
 Junto a ello, el trabajo futuro más realista viene dado en forma de la implantación del sistema de optimización desarrollado en el creciente número de nuevas instalaciones híbridas con activos energéticos de almacenamiento en incorporación continua a la red. Como ya se ha detallado anteriormente, los \glspl{bess}, al ser todavía una tecnología no tan ampliamente establecida, se encuentran en continuo crecimiento. De hecho, incluso durante el proceso de desarrollo se hizo disponible un nuevo sistema de almacenamiento.
 
