Revert citation formatting and add translated graphics

--- a/principal.tex
+++ b/principal.tex
@@ -14,6 +14,7 @@
 \usepackage[pdftex, plainpages=false, pdfpagelabels]{hyperref}
 \usepackage{algorithm}
 \usepackage[T1]{fontenc}
+\usepackage[spanish]{translator}
 \usepackage[acronym, nonumberlist, numberedsection=nolabel]{glossaries}
 \usepackage{hypernat}
 \usepackage{pgfgantt}
@@ -38,7 +39,7 @@
   breaklinks=true,
 }
 
-\bibpunct{}{}{,}{a}{}{}
+\bibpunct{}{}{,}{s}{}{}
 
 \input{acronyms.tex}
 \makeglossaries
@@ -82,7 +83,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-% \input{chapter1.tex}
+\input{chapter1.tex}
 % \input{chapter2.tex}
 % \input{chapter3.tex}
 % \input{chapter4.tex}
