--- a/acronyms.tex
+++ b/acronyms.tex
@@ -6,7 +6,13 @@
 
 \newacronym[longplural=sistemas de control de baterías]{bms}{BMS}{sistema de control de baterías}
 
+\newacronym[longplural=Boletines Oficiales del Estado]{boe}{BOE}{Boletín Oficial del Estado}
+
 \newacronym[longplural=costes capitales]{capex}{CAPEX}{coste capitales}
+
+\newacronym[longplural=Comisiones Nacionales de los Mercados y la Competencia]{cnmc}{CNMC}{Comisión Nacional de los Mercados y la Competencia}
+
+\newacronym[longplural=almacenes de datos]{dw}{DW}{almacén de datos}
 
 \newacronym[longplural=interrogaciones generales]{gi}{GI}{interrogación general}
 
@@ -28,7 +34,7 @@
 
 \newacronym[longplural=unidades de tiempo de mercado]{mtu}{MTU}{unidad de tiempo de mercado}
 
-\newacronym[longplural=operadores del Mercado Ibérico de Energía]{omie}{OMIE}{Operador del Mercado Ibérico de Energía}
+\newacronym[longplural=Operadores del Mercado Ibérico de Energía]{omie}{OMIE}{Operador del Mercado Ibérico de Energía}
 
 \newacronym[longplural=costes de operación]{opex}{OPEX}{coste de operación}
 
@@ -38,10 +44,14 @@
 
 \newacronym[longplural=sistemas de información de planta]{pis}{PIS}{sistema de información de planta}
 
+\newacronym[longplural=arquitecturas de referencia empresarial de Purdue]{pera}{PERA}{arquitectura de referencia empresarial de Purdue}
+
 \newacronym[longplural=Redes Eléctricas Españolas]{ree}{REE}{Red Eléctrica Española}
 
 \newacronym[longplural=unidades terminales remotas]{rtu}{RTU}{unidad terminal remota}
 
 \newacronym[longplural=estados de carga]{soc}{SOC}{estado de carga}
+
+\newacronym[longplural=estados de salud]{soh}{SOH}{estado de salud}
 
 \newacronym[longplural=operadores del sistema de transimisón]{tso}{TSO}{operador del sistema de transmisión}
