--- a/references.bib
+++ b/references.bib
@@ -1,11 +1,33 @@
-@misc{boe20240425,
-  title  = {Resolución de 25 de abril de 2024},
+@misc{cnmc2024resolucion,
+  title  = {Resolución de 25 de abril de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican las condiciones relativas al balance y los procedimientos de operación para la participación del sistema eléctrico peninsular español en las plataformas europeas de balance Mari y Picasso},
   author = {CNMC},
   url    = {https://www.boe.es/eli/es/res/2024/04/25/(6)},
   year   = {2024}
 }
 
-@article{hu2022119512,
+@misc{cnmc2025resolucion,
+  title  = {Resolución de 28 de febrero de 2025, de la Comisión Nacional de los Mercados y la Competencia, por la que se publican las reglas de funcionamiento de los mercados diario e intradiario de electricidad para su adaptación a la negociación cuarto-horaria y a la nueva tipología de ofertas del mercado diario},
+  author = {CNMC},
+  url    = {https://www.boe.es/eli/es/res/2025/02/28/(2)},
+  year   = {2025}
+}
+
+@misc{crespo2004resolucion,
+  title     = {Resoluci{\'o}n de restricciones t{\'e}cnicas en la programaci{\'o}n diaria de la generaci{\'o}n mediante descomposici{\'o}n de Benders},
+  author    = {Crespo, Jorge Mart{\'\i}nez and Garc{\'\i}a, Julio Usaola and Gonz{\'a}lez, Jos{\'e} Luis Fern{\'a}ndez},
+  year      = {2004},
+  publisher = {Madrid, Espa{\~n}a: Universidad Carlos III de Madrid}
+}
+
+@misc{deutz2023what,
+  title  = {What is a Battery Energy Storage System (BESS)?},
+  author = {DEUTZ Australia},
+  year   = {2023},
+  url    = {https://www.deutz.com.au/resources/what-is-a-battery-energy-storage-system-bess/},
+  note   = {Accessed: 2025-09-15}
+}
+
+@article{hu2022potential,
   title    = {Potential utilization of battery energy storage systems (BESS) in the major European electricity markets},
   journal  = {Applied Energy},
   volume   = {322},
@@ -19,6 +41,31 @@
   abstract = {Given the declining cost of battery technology in the last decade, nowadays the application of Battery Energy Storage Systems (BESS) becomes a more attractive solution in electrical power systems. The objective of this work is to analyze the potential utilization of BESS in the major European electricity markets. A general payoff model for BESS operation is proposed to correctly address the operational flexibility of battery systems. Utilization factors such as potentially profitable utilization time and rate are calculated for common applications including energy arbitrage and frequency support services using real market information. The result shows that under the current empirical estimation of the battery cost and lifetime, BESS is not feasible for energy arbitrage in most of the European electricity markets. However, BESS shows clearly and significantly higher potential in providing frequency support services. The result suggests that, when the frequency containment reserve is remunerable, BESS has already become potentially profitable in central European countries. For example in 2021, the potentially profitable utilization rate has reached almost 100% for the “Frequency Containment Reserve for Normal operation” (FCR-N) in the Danish market. Meanwhile, in the British Isles and some other islanded local markets, a remarkable level of scarcity of flexibility has been observed. As a result, the potential of BESS would also be encouraging in these markets with a declining battery cost in the future, if the market design would be improved to correctly address the flexibility provided by the battery systems.}
 }
 
+@misc{ingeteam2022ingeteam,
+  title  = {Ingeteam suministra un sistema de baterías y su electrónica de potencia para la mayor planta de hidrógeno verde de Europa},
+  author = {Ingeteam},
+  year   = {2022},
+  url    = {https://www.ingeteam.com/SaladePrensa/Noticias/tabid/226/articleType/ArticleView/articleId/3390/Ingeteam-suministra-un-sistema-de-baterias-y-su-electronica-de-potencia-para-la-mayor-planta-de-hidrogeno-verde-de-Europa.aspx},
+  note   = {Accessed: 2025-09-15}
+}
+
+@article{garrues2009red,
+  title     = {Red El{\'e}ctrica de Espa{\~n}a SA: Instrument of regulation and liberalization of the Spanish electricity market (1944--2004)},
+  author    = {Garru{\'e}s-Irurzun, Josean and L{\'o}pez-Garc{\'\i}a, Santiago},
+  journal   = {Renewable and Sustainable Energy Reviews},
+  volume    = {13},
+  number    = {8},
+  pages     = {2061--2069},
+  year      = {2009},
+  publisher = {Elsevier}
+}
+
+@misc{larsson2018cost,
+  title  = {Cost models for battery energy storage systems},
+  author = {Larsson, Patrik and B{\"o}rjesson, Philip},
+  year   = {2018}
+}
+
 @article{shamarova2022review,
   title     = {Review of battery energy storage systems modeling in microgrids with renewables considering battery degradation},
   author    = {Shamarova, Nataliia and Suslov, Konstantin and Ilyushin, Pavel and Shushpanov, Ilia},
@@ -28,4 +75,33 @@
   pages     = {6967},
   year      = {2022},
   publisher = {MDPI}
+}
+
+@techreport{turkenburg2000renewable,
+  title       = {Renewable energy technologies},
+  author      = {Turkenburg, Wim C and Faaij, A and others},
+  year        = {2000},
+  institution = {UNDP/UNDESA/WEC: Energy and the Challenge of Sustainability. World Energy~…}
+}
+
+@article{williams1994purdue,
+  title     = {The Purdue enterprise reference architecture},
+  author    = {Williams, Theodore J},
+  journal   = {Computers in industry},
+  volume    = {24},
+  number    = {2-3},
+  pages     = {141--158},
+  year      = {1994},
+  publisher = {Elsevier}
+}
+
+@article{xu2014bess,
+  title     = {BESS control strategies for participating in grid frequency regulation},
+  author    = {Xu, Bolun and Oudalov, Alexandre and Poland, Jan and Ulbig, Andreas and Andersson, G{\"o}ran},
+  journal   = {IFAC Proceedings Volumes},
+  volume    = {47},
+  number    = {3},
+  pages     = {4024--4029},
+  year      = {2014},
+  publisher = {Elsevier}
 }
