--- a/chapter1.tex
+++ b/chapter1.tex
@@ -5,11 +5,9 @@
 
 \begin{quotation}
 
-  El calor aprieta.
+  El calor aprieta. Tratas de distraerte de las altas temperaturas y aliviar la pesadez del aire con tu programa favorito refrescante bebida en mano. En cambio, la nevera se mantiene inusualmente silenciosa, el ventilador permanece inmóvil y la televisión no parece despertar. Lentamente, la habitación se sume en la oscuridad.
 
-  Tratas de distraerte de las altas temperaturas y aliviar la pesadez del aire con tu programa favorito refrescante bebida en mano. En cambio, la nevera se mantiene inusualmente silenciosa, el ventilador permanece inmóvil y la televisión no parece despertar. Lentamente, la habitación se sume en la oscuridad.
-
-  Tiempo después, toda la estancia repentinamente se inunda nuevamente en la luz de las lámparas previamente impotentemente encendidas que vuelven a la vida, el apagón parece haber concluido. Comprendes que, acostumbrado a bastar con apretar el interruptor, rara vez reflexionas en el complejo entramado eléctrico detrás de algo tan simple que permanece oculto ante la mirada común.
+  Un tiempo después, toda la estancia repentinamente se inunda nuevamente en la luz de las lámparas previamente impotentemente encendidas que vuelven a la vida, el apagón parece haber concluido. Comprendes que, acostumbrado a bastar con apretar el interruptor, rara vez reflexionas en el complejo entramado eléctrico detrás de algo tan simple que permanece oculto ante la mirada común.
 
 \end{quotation}
 
