Break urls correctly

--- a/principal.tex
+++ b/principal.tex
@@ -11,6 +11,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{latexsym}
 \usepackage[sort&compress]{natbib}
+\usepackage[hyphens]{url}
 \usepackage[pdftex, plainpages=false, pdfpagelabels]{hyperref}
 \usepackage{algorithm}
 \usepackage[T1]{fontenc}
@@ -85,7 +86,7 @@
 
 \input{chapter1.tex}
 % \input{chapter2.tex}
-% \input{chapter3.tex}
+\input{chapter3.tex}
 % \input{chapter4.tex}
 % \input{chapter5.tex}
 % \input{chapter6.tex}
