Add svg support

--- a/principal.tex
+++ b/principal.tex
@@ -11,14 +11,15 @@
 \usepackage[utf8]{inputenc}
 \usepackage{latexsym}
 \usepackage[sort&compress]{natbib}
+\usepackage{svg}
+\usepackage[spanish]{translator}
+\usepackage{pgfgantt}
 \usepackage[hyphens]{url}
 \usepackage[pdftex, plainpages=false, pdfpagelabels]{hyperref}
 \usepackage{algorithm}
 \usepackage[T1]{fontenc}
-\usepackage[spanish]{translator}
 \usepackage[acronym, nonumberlist, numberedsection=nolabel]{glossaries}
 \usepackage{hypernat}
-\usepackage{pgfgantt}
 
 \topmargin = -0.56in
 \textheight = 8.60in
