Revise infrastructure until standalone topological configuration

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -55,3 +55,9 @@
 \newacronym[longplural=estados de salud]{soh}{SOH}{estado de salud}
 
 \newacronym[longplural=operadores del sistema de transimisón]{tso}{TSO}{operador del sistema de transmisión}
+
+\newacronym[longplural=unidades físicas]{ufi}{UFI}{unidad física}
+
+\newacronym[longplural=unidades de oferta]{uof}{UOF}{unidad de oferta}
+
+\newacronym[longplural=unidades de programación]{up}{UP}{unidad de programación}
