--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,14 @@
-@misc{cnmc2024resolucion,
+@misc{cnmc202404resolucion,
   title  = {Resolución de 25 de abril de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican las condiciones relativas al balance y los procedimientos de operación para la participación del sistema eléctrico peninsular español en las plataformas europeas de balance Mari y Picasso},
   author = {CNMC},
   url    = {https://www.boe.es/eli/es/res/2024/04/25/(6)},
+  year   = {2024}
+}
+
+@misc{cnmc202403resolucion,
+  title  = {Resolución de 6 de marzo de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican procedimientos de operación eléctricos para la participación de la demanda y el almacenamiento en los servicios de no frecuencia y en la solución de restricciones técnicas e integración de la hibridación de tecnologías en el proceso de programación},
+  author = {CNMC},
+  url    = {https://www.boe.es/eli/es/res/2024/03/06/(3)},
   year   = {2024}
 }
 
@@ -13,16 +20,16 @@
 }
 
 @misc{crespo2004resolucion,
-  title     = {Resoluci{\'o}n de restricciones t{\'e}cnicas en la programaci{\'o}n diaria de la generaci{\'o}n mediante descomposici{\'o}n de Benders},
-  author    = {Crespo, Jorge Mart{\'\i}nez and Garc{\'\i}a, Julio Usaola and Gonz{\'a}lez, Jos{\'e} Luis Fern{\'a}ndez},
+  title     = {Resolución de restricciones técnicas en la programación diaria de la generación mediante descomposición de Benders},
+  author    = {Crespo, Jorge Martínez and García, Julio Usaola and González, José Luis Fernández},
   year      = {2004},
-  publisher = {Madrid, Espa{\~n}a: Universidad Carlos III de Madrid}
+  publisher = {Madrid, España: Universidad Carlos III de Madrid}
 }
 
 @misc{deutz2023what,
   title  = {What is a Battery Energy Storage System (BESS)?},
   author = {DEUTZ Australia},
-  year   = {2023},
+  year   = {2025},
   url    = {https://www.deutz.com.au/resources/what-is-a-battery-energy-storage-system-bess/},
   note   = {Accessed: 2025-09-15}
 }
@@ -36,9 +43,17 @@
   issn     = {0306-2619},
   doi      = {https://doi.org/10.1016/j.apenergy.2022.119512},
   url      = {https://www.sciencedirect.com/science/article/pii/S0306261922008340},
-  author   = {Yu Hu and Miguel Armada and María {Jesús Sánchez}},
+  author   = {Yu Hu and Miguel Armada and María Jesús Sánchez},
   keywords = {Battery Energy Storage Systems, European electricity markets, Potentially profitable utilization, Energy arbitrage, Frequency containment reserve},
   abstract = {Given the declining cost of battery technology in the last decade, nowadays the application of Battery Energy Storage Systems (BESS) becomes a more attractive solution in electrical power systems. The objective of this work is to analyze the potential utilization of BESS in the major European electricity markets. A general payoff model for BESS operation is proposed to correctly address the operational flexibility of battery systems. Utilization factors such as potentially profitable utilization time and rate are calculated for common applications including energy arbitrage and frequency support services using real market information. The result shows that under the current empirical estimation of the battery cost and lifetime, BESS is not feasible for energy arbitrage in most of the European electricity markets. However, BESS shows clearly and significantly higher potential in providing frequency support services. The result suggests that, when the frequency containment reserve is remunerable, BESS has already become potentially profitable in central European countries. For example in 2021, the potentially profitable utilization rate has reached almost 100% for the “Frequency Containment Reserve for Normal operation” (FCR-N) in the Danish market. Meanwhile, in the British Isles and some other islanded local markets, a remarkable level of scarcity of flexibility has been observed. As a result, the potential of BESS would also be encouraging in these markets with a declining battery cost in the future, if the market design would be improved to correctly address the flexibility provided by the battery systems.}
+}
+
+@misc{iberdrola2024bess,
+  title  = {BESS: Qué son y cómo funcionan},
+  author = {Iberdrola},
+  year   = {2024},
+  url    = {https://www.iberdrola.com/conocenos/nuestra-actividad/almacenamiento-energia/bess},
+  note   = {Accessed: 2025-09-15}
 }
 
 @misc{ingeteam2022ingeteam,
@@ -50,8 +65,8 @@
 }
 
 @article{garrues2009red,
-  title     = {Red El{\'e}ctrica de Espa{\~n}a SA: Instrument of regulation and liberalization of the Spanish electricity market (1944--2004)},
-  author    = {Garru{\'e}s-Irurzun, Josean and L{\'o}pez-Garc{\'\i}a, Santiago},
+  title     = {Red Eléctrica de España SA: Instrument of regulation and liberalization of the Spanish electricity market (1944--2004)},
+  author    = {Garrués-Irurzun, Josean and López-García, Santiago},
   journal   = {Renewable and Sustainable Energy Reviews},
   volume    = {13},
   number    = {8},
@@ -62,8 +77,33 @@
 
 @misc{larsson2018cost,
   title  = {Cost models for battery energy storage systems},
-  author = {Larsson, Patrik and B{\"o}rjesson, Philip},
+  author = {Larsson, Patrik and Börjesson, Philip},
   year   = {2018}
+}
+
+@misc{omie2025instruccion,
+  author = {OMIE},
+  title  = {Instrucción 1/2025: Inicio de la negociación cuarto-horaria en los mercados intradiarios y de la nueva tipología de ofertas en el mercado diario},
+  year   = {2025},
+  url    = {https://www.omie.es/sites/default/files/2025-03/instruccion_1_2025_es_1.pdf},
+  note   = {Accedido: 2025-09-15}
+}
+
+@inproceedings{parlikar2019topology,
+  title        = {Topology and efficiency analysis of utility-scale battery energy storage systems},
+  author       = {Parlikar, Anupam and Hesse, Holger and Jossen, Andreas},
+  booktitle    = {The 13th International Renewable Energy Storage Conference 2019 (IRES 2019)},
+  pages        = {119--131},
+  year         = {2019},
+  organization = {Atlantis Press}
+}
+
+@misc{ree2025unidades,
+  title  = {Unidades físicas},
+  author = {Red Eléctrica de España},
+  year   = {2025},
+  url    = {https://www.esios.ree.es/es/unidades-fisicas},
+  note   = {Accessed: 2025-09-15}
 }
 
 @article{shamarova2022review,
@@ -97,7 +137,7 @@
 
 @article{xu2014bess,
   title     = {BESS control strategies for participating in grid frequency regulation},
-  author    = {Xu, Bolun and Oudalov, Alexandre and Poland, Jan and Ulbig, Andreas and Andersson, G{\"o}ran},
+  author    = {Xu, Bolun and Oudalov, Alexandre and Poland, Jan and Ulbig, Andreas and Andersson, Göran},
   journal   = {IFAC Proceedings Volumes},
   volume    = {47},
   number    = {3},
