Revise entire infrastructure chapter

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -14,6 +14,8 @@
 
 \newacronym[longplural=almacenes de datos]{dw}{DW}{almacén de datos}
 
+\newacronym[longplural=reservas para la contención de frecuencia]{fcr}{FCR}{reserva para la contención de frecuencia}
+
 \newacronym[longplural=interrogaciones generales]{gi}{GI}{interrogación general}
 
 \newacronym[longplural=sistemas de control industrial]{ics}{ICS}{sistema de control industrial}
@@ -40,19 +42,23 @@
 
 \newacronym[longplural=tecnologías operativas]{ot}{OT}{tecnología operativa}
 
+\newacronym[longplural=arquitecturas de referencia empresarial de Purdue]{pera}{PERA}{arquitectura de referencia empresarial de Purdue}
+
+\newacronym[longplural=sistemas de conversión de energía]{pcs}{PCS}{sistema de conversión de energía}
+
 \newacronym[longplural=puntos frontera]{pf}{PF}{punto frontera}
 
 \newacronym[longplural=sistemas de información de planta]{pis}{PIS}{sistema de información de planta}
-
-\newacronym[longplural=arquitecturas de referencia empresarial de Purdue]{pera}{PERA}{arquitectura de referencia empresarial de Purdue}
 
 \newacronym[longplural=Redes Eléctricas Españolas]{ree}{REE}{Red Eléctrica Española}
 
 \newacronym[longplural=unidades terminales remotas]{rtu}{RTU}{unidad terminal remota}
 
-\newacronym[longplural=estados de carga]{soc}{SOC}{estado de carga}
+\newacronym[longplural=sistemas de comunicación\, ejecución y control de la interrumpibilidad]{sceci}{SCECI}{sistema de comunicación, ejecución y control de la interrumpibilidad}
 
-\newacronym[longplural=estados de salud]{soh}{SOH}{estado de salud}
+\newacronym[longplural=estados de carga]{soc}{SoC}{estado de carga}
+
+\newacronym[longplural=estados de salud]{soh}{SoH}{estado de salud}
 
 \newacronym[longplural=operadores del sistema de transimisón]{tso}{TSO}{operador del sistema de transmisión}
 
