--- a/principal.tex
+++ b/principal.tex
@@ -11,6 +11,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{latexsym}
 \usepackage[sort&compress]{natbib}
+\usepackage{siunitx}
 \usepackage{svg}
 \usepackage[spanish]{translator}
 \usepackage{pgfgantt}
@@ -50,9 +51,9 @@
 
 \section*{Todo}
 \begin{enumerate}
+  \item Redactar capítulo estado de la cuestión (2 días)
   \item Elaborar diagrama Gantt de la sección plan de trabajo (1 día)
   \item Completar ecuaciones (1 días)
-  \item Redactar capítulo estado de la cuestión (2 días)
   \item Añadir referencias bibliográficas (1 día)
   \item Completar figuras (2 días)
 \end{enumerate}
