--- a/references.bib
+++ b/references.bib
@@ -1,20 +1,73 @@
-@misc{cnmc202404resolucion,
+@inproceedings{azahra2020optimized,
+  title        = {Optimized configuration of photovoltaic and battery energy storage system (BESS) in an isolated grid: a case study of Eastern Indonesia},
+  author       = {Azahra, A and Syahindra, KD and Aryani, DR and Jufri, FH and Ardita, IM},
+  booktitle    = {IOP Conference Series: Earth and Environmental Science},
+  volume       = {599},
+  pages        = {012017},
+  year         = {2020},
+  organization = {IOP Publishing}
+}
+
+@misc{aveva2025aveva,
+  title  = {AVEVA PI System},
+  author = {AVEVA},
+  url    = {https://www.aveva.com/en/products/aveva-pi-system/},
+  year   = {2025},
+  note   = {Accedido: 2025-09-15}
+}
+
+@inproceedings{baviskar2023opportunities,
+  title        = {Opportunities for battery energy storage in stand-alone and co-located hybrid power plant in distribution grid},
+  author       = {Baviskar, Aeishwarya and Anand, Abhinav and Das, Kaushik and Hansen, Anca D},
+  booktitle    = {22nd Wind and Solar Integration Workshop (WIW 2023)},
+  volume       = {2023},
+  pages        = {656--660},
+  year         = {2023},
+  organization = {IET}
+}
+
+@inproceedings{bresciani2025hybridization,
+  title        = {Hybridization of Variable Renewable Energy Sources with Battery Energy Storage Systems: Opportunities, Modelling and Case Study in Spain},
+  author       = {Bresciani, Federico and Mandelli, Stefano},
+  booktitle    = {Offshore Mediterranean Conference and Exhibition},
+  pages        = {OMC--2025},
+  year         = {2025},
+  organization = {OMC}
+}
+
+@article{carbajo2007mercados,
+  title   = {Los mercados eléctricos y los servicios de ajuste del sistema},
+  author  = {Carbajo, Alberto},
+  journal = {Red Elétrica de España},
+  pages   = {55--62},
+  year    = {2007}
+}
+
+@misc{catl2023catl,
+  title  = {CATL},
+  author = {Contemporary Amperex Technology Co., Limited (CATL)},
+  url    = {https://www.catl.com/},
+  year   = {2023},
+  note   = {Accedido: 2025-09-15}
+}
+
+@misc{cnmc2024balance,
   title  = {Resolución de 25 de abril de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican las condiciones relativas al balance y los procedimientos de operación para la participación del sistema eléctrico peninsular español en las plataformas europeas de balance Mari y Picasso},
-  author = {CNMC},
+  author = {Comisión Nacional de los Mercados y la Competencia},
   url    = {https://www.boe.es/eli/es/res/2024/04/25/(6)},
   year   = {2024}
 }
 
-@misc{cnmc202403resolucion,
+@misc{cnmc2024servicios,
   title  = {Resolución de 6 de marzo de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican procedimientos de operación eléctricos para la participación de la demanda y el almacenamiento en los servicios de no frecuencia y en la solución de restricciones técnicas e integración de la hibridación de tecnologías en el proceso de programación},
-  author = {CNMC},
+  author = {Comisión Nacional de los Mercados y la Competencia},
   url    = {https://www.boe.es/eli/es/res/2024/03/06/(3)},
   year   = {2024}
 }
 
 @misc{cnmc2025resolucion,
   title  = {Resolución de 28 de febrero de 2025, de la Comisión Nacional de los Mercados y la Competencia, por la que se publican las reglas de funcionamiento de los mercados diario e intradiario de electricidad para su adaptación a la negociación cuarto-horaria y a la nueva tipología de ofertas del mercado diario},
-  author = {CNMC},
+  author = {Comisión Nacional de los Mercados y la Competencia},
   url    = {https://www.boe.es/eli/es/res/2025/02/28/(2)},
   year   = {2025}
 }
@@ -34,6 +87,23 @@
   note   = {Accessed: 2025-09-15}
 }
 
+@misc{gallo2023stand,
+  title  = {Stand-alone battery energy storage system (BESS): plant design and economic assessment},
+  author = {GALLO, MATTIA},
+  year   = {2023}
+}
+
+@article{garrues2009red,
+  title     = {Red Eléctrica de España SA: Instrument of regulation and liberalization of the Spanish electricity market (1944--2004)},
+  author    = {Garrués-Irurzun, Josean and López-García, Santiago},
+  journal   = {Renewable and Sustainable Energy Reviews},
+  volume    = {13},
+  number    = {8},
+  pages     = {2061--2069},
+  year      = {2009},
+  publisher = {Elsevier}
+}
+
 @article{hu2022potential,
   title    = {Potential utilization of battery energy storage systems (BESS) in the major European electricity markets},
   journal  = {Applied Energy},
@@ -51,28 +121,41 @@
 @misc{iberdrola2024bess,
   title  = {BESS: Qué son y cómo funcionan},
   author = {Iberdrola},
-  year   = {2024},
   url    = {https://www.iberdrola.com/conocenos/nuestra-actividad/almacenamiento-energia/bess},
+  year   = {2024},
   note   = {Accessed: 2025-09-15}
+}
+
+@manual{iec2016telecontrol,
+  title  = {Telecontrol equipment and systems - Part 5-104: Transmission protocols - Network access for IEC 60870-5-101 using standard transport profiles},
+  author = {International Electrotechnical Commission (IEC)},
+  number = {IEC 60870-5-104},
+  year   = {2016}
 }
 
 @misc{ingeteam2022ingeteam,
   title  = {Ingeteam suministra un sistema de baterías y su electrónica de potencia para la mayor planta de hidrógeno verde de Europa},
   author = {Ingeteam},
-  year   = {2022},
   url    = {https://www.ingeteam.com/SaladePrensa/Noticias/tabid/226/articleType/ArticleView/articleId/3390/Ingeteam-suministra-un-sistema-de-baterias-y-su-electronica-de-potencia-para-la-mayor-planta-de-hidrogeno-verde-de-Europa.aspx},
+  year   = {2022},
   note   = {Accessed: 2025-09-15}
 }
 
-@article{garrues2009red,
-  title     = {Red Eléctrica de España SA: Instrument of regulation and liberalization of the Spanish electricity market (1944--2004)},
-  author    = {Garrués-Irurzun, Josean and López-García, Santiago},
-  journal   = {Renewable and Sustainable Energy Reviews},
-  volume    = {13},
-  number    = {8},
-  pages     = {2061--2069},
-  year      = {2009},
-  publisher = {Elsevier}
+@misc{ingeteam2025ingeteam,
+  title  = {Ingeteam},
+  author = {Ingeteam},
+  url    = {https://www.ingeteam.com/},
+  year   = {2025},
+  note   = {Accedido: 2025-09-15}
+}
+
+@inproceedings{kalenderova2024batery,
+  title        = {Batery Energy Storage System (BESS) Siting},
+  author       = {Kalenderova, Antoaneta},
+  booktitle    = {2024 16th Electrical Engineering Faculty Conference (BulEF)},
+  pages        = {1--4},
+  year         = {2024},
+  organization = {IEEE}
 }
 
 @misc{larsson2018cost,
@@ -81,11 +164,27 @@
   year   = {2018}
 }
 
+@misc{mterd2024orden,
+  title  = {Orden TED/1487/2024, de 26 de diciembre, por la que se establecen los precios de los cargos del sistema eléctrico y se establecen diversos costes regulados del sistema eléctrico para el ejercicio 2025},
+  author = {Ministerio para la Transición Ecológica y el Reto Demográfico},
+  url    = {https://www.boe.es/eli/es/o/2024/12/26/ted1487},
+  year   = {2024},
+  note   = {Accedido: 2025-09-15}
+}
+
 @misc{omie2025instruccion,
-  author = {OMIE},
   title  = {Instrucción 1/2025: Inicio de la negociación cuarto-horaria en los mercados intradiarios y de la nueva tipología de ofertas en el mercado diario},
-  year   = {2025},
+  author = {OMIE},
   url    = {https://www.omie.es/sites/default/files/2025-03/instruccion_1_2025_es_1.pdf},
+  year   = {2025},
+  note   = {Accedido: 2025-09-15}
+}
+
+@misc{omie2025mercado,
+  title  = {Mercado de electricidad},
+  author = {OMIE},
+  url    = {https://www.omie.es/es/mercado-de-electricidad},
+  year   = {2025},
   note   = {Accedido: 2025-09-15}
 }
 
@@ -98,11 +197,19 @@
   organization = {Atlantis Press}
 }
 
+@manual{ree2009protocolo,
+  author = {Red Eléctrica de España},
+  title  = {Protocolo de comunicaciones entre los sistemas de gestión del operador del sistema y equipos de control de consumidores interrumpibles y empresas distribuidoras (PCC-SCECI)},
+  url    = {https://www.ree.es/sites/default/files/protocolo_sceci_6_2_4.pdf},
+  year   = {2009},
+  note   = {Revisión 6.2.4}
+}
+
 @misc{ree2025unidades,
   title  = {Unidades físicas},
   author = {Red Eléctrica de España},
-  year   = {2025},
   url    = {https://www.esios.ree.es/es/unidades-fisicas},
+  year   = {2025},
   note   = {Accessed: 2025-09-15}
 }
 
@@ -117,11 +224,30 @@
   publisher = {MDPI}
 }
 
+@article{swales1999open,
+  title   = {Open modbus/tcp specification},
+  author  = {Swales, Andy and others},
+  journal = {Schneider Electric},
+  volume  = {29},
+  number  = {3},
+  pages   = {19},
+  year    = {1999}
+}
+
 @techreport{turkenburg2000renewable,
   title       = {Renewable energy technologies},
   author      = {Turkenburg, Wim C and Faaij, A and others},
   year        = {2000},
   institution = {UNDP/UNDESA/WEC: Energy and the Challenge of Sustainability. World Energy~…}
+}
+
+@manual{une2017equipos,
+  title  = {Equipos y sistemas de telecontrol. Parte 5-104: Protocolos de transmisión. Acceso a redes utilizando perfiles de transporte normalizados por la norma IEC 60870-5-101. (Ratificada por la Asociación Española de Normalización en enero de 2017.)},
+  author = {Asociación Española de Normalización y Certificación (AENOR)},
+  number = {UNE-EN 60870-5-104:2016},
+  url    = {https://www.une.org/encuentra-tu-norma/busca-tu-norma/norma?c=N0057580},
+  year   = {2017},
+  note   = {Accedido: 2025-09-15}
 }
 
 @article{williams1994purdue,
@@ -144,4 +270,12 @@
   pages     = {4024--4029},
   year      = {2014},
   publisher = {Elsevier}
+}
+
+@misc{zscaler2025what,
+  title  = {What Is the Purdue Model for ICS Security?},
+  author = {Zscaler},
+  url    = {https://www.zscaler.com/resources/security-terms-glossary/what-is-purdue-model-ics-security},
+  year   = {2025},
+  note   = {Accedido: 2025-09-15}
 }
