--- a/title.tex
+++ b/title.tex
@@ -16,7 +16,7 @@
 
   \vspace{0.5cm}
 
-  MÁSTER EN INTERNET DE LAS COSAS. FACULTAD DE INFORMÁTICA\\
+  MÁSTER EN INTERNET DE LAS COSAS\@. FACULTAD DE INFORMÁTICA\\
   UNIVERSIDAD COMPLUTENSE DE MADRID\\
 
   \vspace{0.65cm}
