Revise less than half of setpoint

--- a/principal.tex
+++ b/principal.tex
@@ -1,5 +1,6 @@
 \documentclass[final,12pt,oneside]{class_diss}
 
+\usepackage{eurosym}
 \usepackage{algpseudocode}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -54,7 +55,6 @@
   \item Redactar capítulo estado de la cuestión (2 días)
   \item Elaborar diagrama Gantt de la sección plan de trabajo (1 día)
   \item Completar ecuaciones (1 días)
-  \item Añadir referencias bibliográficas (1 día)
   \item Completar figuras (2 días)
 \end{enumerate}
 
@@ -91,7 +91,7 @@
 \input{chapter3.tex}
 % \input{chapter4.tex}
 % \input{chapter5.tex}
-% \input{chapter6.tex}
+\input{chapter6.tex}
 % \input{chapter7.tex}
 \input{chapter8.tex}
 
