--- a/references.bib
+++ b/references.bib
@@ -224,6 +224,14 @@
   publisher = {MDPI}
 }
 
+@misc{sunkko2025two,
+  title  = {Two Types of BMSS and Each Wiring Diagram},
+  author = {Sunkko},
+  url    = {https://sunkko.net/blog/two-types-of-bmss-and-each-wiring-diagram/},
+  year   = {2025},
+  note   = {Accedido: 2025-09-15}
+}
+
 @article{swales1999open,
   title   = {Open modbus/tcp specification},
   author  = {Swales, Andy and others},
